fix(truncate): fix gap change delay for truncate variation

--- a/src/patternfly/components/ExpandableSection/expandable-section.scss
+++ b/src/patternfly/components/ExpandableSection/expandable-section.scss
@@ -129,6 +129,7 @@
 
   &.pf-m-truncate {
     --#{$expandable-section}--Gap: var(--#{$expandable-section}--m-truncate--Gap);
+    --#{$expandable-section}__content--TransitionDelay--hide: 0s;
 
     &:not(.pf-m-expanded) .#{$expandable-section}__content {
       // stylelint-disable
